@@ -70,7 +70,8 @@ char *KismetHelpText[] = {
     "  P       Probe request - no associated connection yet",
     "  A       Access point - standard wireless network",
     "  H       Ad-hoc - point-to-point wireless network",
-    "  O       Lucent - Lucent Outdoor Router network",
+    "  T       Turbocell - Turbocell (aka Karlnet or Lucent Outdoor",
+    "           Router) network",
     "  G       Group - Group of wireless networks",
     "  D       Data - Data only network with no control packets.",
     "",
