@@ -293,7 +293,8 @@ int TcpClient::ParseData(char *in_data) {
         scanned = sscanf(in_data+hdrlen+18, "%d \001%255[^\001]\001 \001%255[^\001]\001 "
                          "%d %d %d %d %d %d %d %d %d %hd.%hd.%hd.%hd "
                          "%d %f %f %f %f %f %f %f %f %d %d %d %f %17s %d %d %d %d %d %d %d %f %f %f "
-                         "%lf %lf %lf %ld %ld",
+                         "%lf %lf %lf %ld %ld"
+                         "%d %d %d",
                          (int *) &net->type, ssid, beacon,
                          &net->llc_packets, &net->data_packets, &net->crypt_packets, &net->interesting_packets,
                          &net->channel, &net->wep, (int *) &net->first_time, (int *) &net->last_time,
@@ -307,7 +308,8 @@ int TcpClient::ParseData(char *in_data) {
                          &net->best_quality, &net->best_signal, &net->best_noise,
                          &net->best_lat, &net->best_lon, &net->best_alt,
                          &net->aggregate_lat, &net->aggregate_lon, &net->aggregate_alt,
-                         &net->aggregate_points, &net->datasize);
+                         &net->aggregate_points, &net->datasize,
+                         &net->turbocell_nid, (int *) &net->turbocell_mode, &net->turbocell_sat);
 
         if (scanned < 45) {
             // fprintf(stderr, "Flubbed network, discarding...\n");
